<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Email_Project</string>
    <string name="action_settings">Settings</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="cc">CC:</string>
    <string name="bcc">BCC:</string>
    <string name="subject">Subject:</string>
    <string name="email_content">Write Your Email Here</string>
    <string name="send">Send</string>
    <string name="clear">Clear</string>
    <string name="back">Back</string>
    <string name="test">1234561234561234561234561234565</string>

</resources>
