<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#E0EEEE"
    tools:context="com.example.email_project.MainActivity" >

    <TextView
        android:id="@+id/tv_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:text="@string/from"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#36648B"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_to"
        android:text="@string/to"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#36648B"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_cc"
        android:text="@string/cc"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#36648B"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_bcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_bcc"
        android:text="@string/bcc"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#36648B"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_subject"
        android:text="@string/subject"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#36648B"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_email_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space1"
        android:text="@string/email_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/txt_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_from"
        android:layout_toEndOf="@+id/tv_from"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:labelFor="@id/txt_from" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txt_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_from"
        android:layout_below="@+id/txt_from"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:labelFor="@id/txt_to" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txt_cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_to"
        android:layout_below="@+id/txt_to"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:labelFor="@id/txt_cc" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txt_bcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_cc"
        android:layout_below="@+id/txt_cc"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:labelFor="@id/txt_bcc" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txt_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txt_bcc"
        android:layout_below="@+id/txt_bcc"
        android:ems="9"
        android:inputType="textEmailSubject"
        android:labelFor="@id/txt_subject" >

        <requestFocus />
    </EditText>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/tv_email_content"
        android:layout_below="@+id/tv_email_content"
        android:layout_marginEnd="15dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/txt_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="13"
                android:inputType="textMultiLine"
                android:labelFor="@id/txt_content" >

                <requestFocus />
            </EditText>
        </RelativeLayout>
    </ScrollView>

    <Space
        android:id="@+id/space1"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_alignStart="@+id/tv_subject"
        android:layout_below="@+id/tv_subject" />

    <Button
        android:id="@+id/bt_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/scrollView1"
        android:layout_below="@+id/scrollView1"
        android:text="@string/send"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bt_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView1"
        android:layout_alignEnd="@+id/scrollView1"
        android:text="@string/clear"
        android:textStyle="bold" />

</RelativeLayout>